add my profile and stand image size.

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 	</head>
 	<body>
 		<div id="main">
-			<h1>we are SixDesigner!</h1>
+			<h1>We are SixDesigner!</h1>
 			<p>我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,</p>
 
-			<h3>ours memory</h3>
-			<a href=""><img src="PIC\111.png"></a>
-			<a href=""><img src="PIC\111.png"></a>
-			<a href=""><img src="PIC\111.png"></a>
-			<a href=""><img src="PIC\111.png"></a>
-			<a href=""><img src="PIC\111.png"></a>
-			<a href=""><img src="PIC\111.png"></a>
+			<h3>Ours memory</h3>
+			<a href="http://william-hunter.github.io/The_Blog/"><img src="PIC\lone.png" alt="董臣龙的头像" height="252" width="252"></a>
+			<a href=""><img src="PIC\111.png" alt="董臣龙的头像" height="252" width="252"></a>
+			<a href=""><img src="PIC\111.png" alt="董臣龙的头像" height="252" width="252"></a>
+			<a href=""><img src="PIC\111.png" alt="董臣龙的头像" height="252" width="252"></a>
+			<a href=""><img src="PIC\111.png" alt="董臣龙的头像" height="252" width="252"></a>
+			<a href=""><img src="PIC\111.png" alt="董臣龙的头像" height="252" width="252"></a>
 
 		</div>		
 	</body>
