add some context

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 	<body>
 		<div id="main">
 			<h1>We are SixDesigner!</h1>
-			<p>我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,我们是一个要把想法变成现实的团队,</p>
+			<p>我们是一个要把想法变成现实的团队,这是一个合作开发和互相交流以及学习的平台，尽管现在我们只能停留于线上活动，而且人数很少，但是事在人为，事情只要去做，就会被改变。</p>
 
 			<h3>Ours memory</h3>
 			<a href="http://william-hunter.github.io/The_Blog/"><img src="PIC\lone.png" alt="董臣龙的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\111.png" alt="董臣龙的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\111.png" alt="董臣龙的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\111.png" alt="董臣龙的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\111.png" alt="董臣龙的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\111.png" alt="董臣龙的头像" height="252" width="252"></a>
-
+			<a href=""><img src="PIC\EXA.png" alt="董臣龙的头像" height="252" width="252"></a>
+			<a href=""><img src="PIC\EXA.png" alt="董臣龙的头像" height="252" width="252"></a>
+			<a href=""><img src="PIC\EXA.png" alt="董臣龙的头像" height="252" width="252"></a>
+			<a href=""><img src="PIC\EXA.png" alt="董臣龙的头像" height="252" width="252"></a>
+			<a href=""><img src="PIC\EXA.png" alt="董臣龙的头像" height="252" width="252"></a>
+			
 		</div>		
 	</body>
 </html>
