add img label "alt"

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 			<h3>Ours memory</h3>
 			<a href="http://william-hunter.github.io/The_Blog/"><img src="PIC\lone.png" alt="董臣龙的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\EXA.png" alt="董臣龙的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\EXA.png" alt="董臣龙的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\EXA.png" alt="董臣龙的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\EXA.png" alt="董臣龙的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\EXA.png" alt="董臣龙的头像" height="252" width="252"></a>
+			<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
+			<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
+			<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
+			<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
+			<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
 			
 		</div>		
 	</body>
