add bobo picture

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 			<p>我们是一个要把想法变成现实的团队,这是一个合作开发和互相交流以及学习的平台，尽管现在我们只能停留于线上活动，而且人数很少，但是事在人为，事情只要去做，就会被改变。</p>
 
 			<h3>Ours memory</h3>
-			<a href="http://william-hunter.github.io/The_Blog/"><img src="PIC\lone.png" alt="董臣龙的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
-			<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
-			
+			<sub>（点击图片可以查看详细）</sub><br>
+			<div id="image">
+				<a href="http://william-hunter.github.io/The_Blog/"><img src="PIC\lone.png" alt="董臣龙的头像" height="252" width="252"></a>
+				<a href=""><img src="PIC\bobo.jpg" alt="董宁波的头像" height="252" width="252"></a>
+				<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
+				<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
+				<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
+				<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
+			</div>
 		</div>		
 	</body>
 </html>
