--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset='utf-8'>
 	    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    	<meta name="description" content="Sixdesigner : 这是我们6人开发组的网络空间">
+    	<meta name="description" content="Character: 这是我们的网络空间">
 
 		<title>SixDesigner</title>
 		<link rel="stylesheet" type="text/css" href="CSS/sheet.css">
 	</head>
 	<body>
 		<div id="main">
-			<h1>We are SixDesigner!</h1>
+			<h1>We are Character!</h1>
 			<p>我们是一个要把想法变成现实的团队,这是一个合作开发和互相交流以及学习的平台，尽管现在我们只能停留于线上活动，而且人数很少，但是事在人为，事情只要去做，就会被改变。</p>
 
 			<h3>Ours memory</h3>
