--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     	<meta name="description" content="Character: 这是我们的网络空间">
 
-		<title>SixDesigner</title>
+		<title>Character</title>
 		<link rel="stylesheet" type="text/css" href="CSS/sheet.css">
 	</head>
 	<body>
