add happy picture

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div id="image">
 				<a href="http://william-hunter.github.io/The_Blog/"><img src="PIC\lone.png" alt="董臣龙的头像" height="252" width="252"></a>
 				<a href="http://starrainfox.github.io/Myblog/"><img src="PIC\bobo.jpg" alt="董宁波的头像" height="252" width="252"></a>
-				<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
+				<a href=""><img src="PIC\happy.jpg" alt="开心的头像" height="252" width="252"></a>
 				<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
 				<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
 				<a href=""><img src="PIC\EXA.png" alt="XXX的头像" height="252" width="252"></a>
