--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<a href=""><img src="PIC\happy.jpg" alt="裴开心的头像" height="252" width="252"></a>
 				<a href=""><img src="PIC\hanjunqiang.jpg" alt="韩军强的头像" height="252" width="252"></a>
 				<a href=""><img src="PIC\wang.jpg" alt="王春节的头像" height="252" width="252"></a>
-				<a href=""><img src="PIC\jiang.jpg" alt="强B的头像" height="252" width="252"></a>
+				<a href="https://github.com/William-Hunter/qiangB"><img src="PIC\jiang.jpg" alt="强B的头像" height="252" width="252"></a>
 			</div>
 		</div>		
 	</body>
