--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 			
 			<div id="image">
 				<h2>Ours memory</h2>
-				<sub>（点击图片可以查看详细）</sub><br>
+				<sub>（点击头像可以进入个人空间）</sub><br>
 				<a href="http://william-hunter.github.io/The_Blog/"><img src="PIC\lone.png" alt="董臣龙的头像" height="252" width="252"></a>
 				<a href="http://starrainfox.github.io/Myblog/"><img src="PIC\bobo.jpg" alt="董宁波的头像" height="252" width="252"></a>
-				<a href=""><img src="PIC\happy.jpg" alt="裴开心的头像" height="252" width="252"></a>
-				<a href=""><img src="PIC\hanjunqiang.jpg" alt="韩军强的头像" height="252" width="252"></a>
-				<a href=""><img src="PIC\wang.jpg" alt="王春节的头像" height="252" width="252"></a>
+				<a href="NONE.html"><img src="PIC\happy.jpg" alt="裴开心的头像" height="252" width="252"></a>
+				<a href="NONE.html"><img src="PIC\hanjunqiang.jpg" alt="韩军强的头像" height="252" width="252"></a>
+				<a href="NONE.html"><img src="PIC\wang.jpg" alt="王春节的头像" height="252" width="252"></a>
 				<a href="http://william-hunter.github.io/qiangB/"><img src="PIC\jiang.jpg" alt="强B的头像" height="252" width="252"></a>
 			</div>
 		</div>		
