--- a/none.html
+++ b/none.html
@@ -9,6 +9,8 @@
 		<link rel="stylesheet" type="text/css" href="CSS/sheet.css">
 	</head>
 	<body>
-		<h1>ta的网页还没做好，耐心等等，说不定一觉醒来就更新好了。</h1>	
+		<div id="center">
+			<p><b>ta的网页还没做好，耐心等等，说不定一觉醒来就更新好了。</b></p>	
+		</div>
 	</body>
 </html>
