--- a/void.html
+++ b/void.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="CSS/sheet.css">
 	</head>
 	<body>
-		<div id="404">
+		<div id="void">
 			<p><b>ta的网页还没做好，耐心等等，说不定一觉醒来就更新好了。</b></p>	
 		</div>
 	</body>
