--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				
 				<a href="void.html"><img src="PIC\wang.jpg" alt="王春节的头像" height="252" width="252"></a>
 				
-				<a href="http://william-hunter.github.io/qiangB/"><img src="PIC\jiang.jpg" alt="强B的头像" height="252" width="252"></a>
+				<a href="http://jiangqiangjq.github.io/Myblog/"><img src="PIC\jiang.jpg" alt="强B的头像" height="252" width="252"></a>
 			</div>
 		</div>		
 	</body>
