add www blog path

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<a href="http://starrainfox.github.io/Myblog/"><img src="PIC\bobo.jpg" alt="董宁波的头像" height="252" width="252"></a>				
 				<a href="http://kjrim.github.io/MyBlog/"><img src="PIC\happy.jpg" alt="裴开心的头像" height="252" width="252"></a>
 				<a href="http://hanjunqiang.github.io/BLOG/"><img src="PIC\hanjunqiang.jpg" alt="韩军强的头像" height="252" width="252"></a>
-				<a href="void.html"><img src="PIC\wang.jpg" alt="王春节的头像" height="252" width="252"></a>
+				<a href="http://ilikesummer.github.io/Blog/"><img src="PIC\wang.jpg" alt="王春节的头像" height="252" width="252"></a>
 				<a href="http://jiangqiangjq.github.io/Myblog/"><img src="PIC\jiang.jpg" alt="强B的头像" height="252" width="252"></a>
 			</div>
 		</div>		
