改了我的头像网址

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<h2>Ours memory</h2>
 				<sub>（点击头像可以进入个人空间）</sub><br>
 				
-				<a href="http://william-hunter.github.io/The_Blog/"><img src="PIC\lone.png" alt="董臣龙的头像" height="252" width="252"></a>
+				<a href="http://william-hunter.github.io/"><img src="PIC\lone.png" alt="董臣龙的头像" height="252" width="252"></a>
 				<a href="http://starrainfox.github.io/Myblog/"><img src="PIC\bobo.jpg" alt="董宁波的头像" height="252" width="252"></a>				
 				<a href="http://kjrim.github.io/MyBlog/"><img src="PIC\happy.jpg" alt="裴开心的头像" height="252" width="252"></a>
 				<a href="http://hanjunqiang.github.io/BLOG/"><img src="PIC\hanjunqiang.jpg" alt="韩军强的头像" height="252" width="252"></a>
