--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 	<head>
-		<meta charset='utf-8'>
-	    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    	<meta name="description" content="Character: 这是我们的网络空间">
+		<meta charset="utf-8">
+        <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Character</title>
 		<link rel="stylesheet" type="text/css" href="CSS/sheet.css">
